syntax = "proto3";

package status;
option go_package = "github.com/CyKV-01/CyberKV/proto";

enum ErrorCode {
    Ok = 0;
    KeyNotFound = 1;
    IoError = 2;
    Corruption = 3;
    InvalidArgument = 4;
    Timeout = 5;
    RetryLater = 6;
}

message Status {
    ErrorCode err_code = 1;
    string err_message = 2;
}

